xml.output
Grammaire

    0 $accept: document $end

    1 document: prolog element miscstar

    2 prolog: miscstar prologend

    3 prologend: doctypedecl miscstar
    4          | /* vide */

    5 doctypedecl: DOCTYPE NOM SUP
    6            | DOCTYPE NOM NOM SUP
    7            | DOCTYPE NOM NOM VALEUR SUP

    8 miscstar: miscstar misc
    9         | /* vide */

   10 misc: COMMENT
   11     | pi

   12 element: INF NOM COLON NOM attributestar SLASH SUP
   13        | INF NOM COLON NOM attributestar SUP content INF SLASH NOM COLON NOM SUP
   14        | INF NOM attributestar SLASH SUP
   15        | INF NOM attributestar SUP content INF SLASH NOM SUP

   16 attributestar: attributestar attribute
   17              | /* vide */

   18 attribute: NOM EGAL VALEUR
   19          | NOM COLON NOM EGAL VALEUR

   20 content: content item
   21        | /* vide */

   22 item: element
   23     | cdsect
   24     | pi
   25     | COMMENT
   26     | DONNEES

   27 cdsect: CDATABEGIN CDATAEND

   28 pi: INFSPECIAL NOM attributestar SUPSPECIAL


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EGAL (258) 18 19
SLASH (259) 12 13 14 15
SUP (260) 5 6 7 12 13 14 15
SUPSPECIAL (261) 28
DOCTYPE (262) 5 6 7
COLON (263) 12 13 19
INFSPECIAL (264) 28
INF (265) 12 13 14 15
CDATABEGIN (266) 27
VALEUR (267) 7 18 19
DONNEES (268) 26
COMMENT (269) 10 25
NOM (270) 5 6 7 12 13 14 15 18 19 28
CDATAEND (271) 27


Non-terminaux, suivis des règles où ils apparaissent

$accept (17)
    à gauche: 0
document (18)
    à gauche: 1, à droite: 0
prolog (19)
    à gauche: 2, à droite: 1
prologend (20)
    à gauche: 3 4, à droite: 2
doctypedecl (21)
    à gauche: 5 6 7, à droite: 3
miscstar (22)
    à gauche: 8 9, à droite: 1 2 3 8
misc (23)
    à gauche: 10 11, à droite: 8
element (24)
    à gauche: 12 13 14 15, à droite: 1 22
attributestar (25)
    à gauche: 16 17, à droite: 12 13 14 15 16 28
attribute (26)
    à gauche: 18 19, à droite: 16
content (27)
    à gauche: 20 21, à droite: 13 15 20
item (28)
    à gauche: 22 23 24 25 26, à droite: 20
cdsect (29)
    à gauche: 27, à droite: 23
pi (30)
    à gauche: 28, à droite: 11 24


État 0

    0 $accept: . document $end

    $défaut  réduction par utilisation de la règle 9 (miscstar)

    document  aller à l'état 1
    prolog    aller à l'état 2
    miscstar  aller à l'état 3


État 1

    0 $accept: document . $end

    $end  décalage et aller à l'état 4


État 2

    1 document: prolog . element miscstar

    INF  décalage et aller à l'état 5

    element  aller à l'état 6


État 3

    2 prolog: miscstar . prologend
    8 miscstar: miscstar . misc

    DOCTYPE     décalage et aller à l'état 7
    INFSPECIAL  décalage et aller à l'état 8
    COMMENT     décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 4 (prologend)

    prologend    aller à l'état 10
    doctypedecl  aller à l'état 11
    misc         aller à l'état 12
    pi           aller à l'état 13


État 4

    0 $accept: document $end .

    $défaut  accepter


État 5

   12 element: INF . NOM COLON NOM attributestar SLASH SUP
   13        | INF . NOM COLON NOM attributestar SUP content INF SLASH NOM COLON NOM SUP
   14        | INF . NOM attributestar SLASH SUP
   15        | INF . NOM attributestar SUP content INF SLASH NOM SUP

    NOM  décalage et aller à l'état 14


État 6

    1 document: prolog element . miscstar

    $défaut  réduction par utilisation de la règle 9 (miscstar)

    miscstar  aller à l'état 15


État 7

    5 doctypedecl: DOCTYPE . NOM SUP
    6            | DOCTYPE . NOM NOM SUP
    7            | DOCTYPE . NOM NOM VALEUR SUP

    NOM  décalage et aller à l'état 16


État 8

   28 pi: INFSPECIAL . NOM attributestar SUPSPECIAL

    NOM  décalage et aller à l'état 17


État 9

   10 misc: COMMENT .

    $défaut  réduction par utilisation de la règle 10 (misc)


État 10

    2 prolog: miscstar prologend .

    $défaut  réduction par utilisation de la règle 2 (prolog)


État 11

    3 prologend: doctypedecl . miscstar

    $défaut  réduction par utilisation de la règle 9 (miscstar)

    miscstar  aller à l'état 18


État 12

    8 miscstar: miscstar misc .

    $défaut  réduction par utilisation de la règle 8 (miscstar)


État 13

   11 misc: pi .

    $défaut  réduction par utilisation de la règle 11 (misc)


État 14

   12 element: INF NOM . COLON NOM attributestar SLASH SUP
   13        | INF NOM . COLON NOM attributestar SUP content INF SLASH NOM COLON NOM SUP
   14        | INF NOM . attributestar SLASH SUP
   15        | INF NOM . attributestar SUP content INF SLASH NOM SUP

    COLON  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 17 (attributestar)

    attributestar  aller à l'état 20


État 15

    1 document: prolog element miscstar .
    8 miscstar: miscstar . misc

    INFSPECIAL  décalage et aller à l'état 8
    COMMENT     décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 1 (document)

    misc  aller à l'état 12
    pi    aller à l'état 13


État 16

    5 doctypedecl: DOCTYPE NOM . SUP
    6            | DOCTYPE NOM . NOM SUP
    7            | DOCTYPE NOM . NOM VALEUR SUP

    SUP  décalage et aller à l'état 21
    NOM  décalage et aller à l'état 22


État 17

   28 pi: INFSPECIAL NOM . attributestar SUPSPECIAL

    $défaut  réduction par utilisation de la règle 17 (attributestar)

    attributestar  aller à l'état 23


État 18

    3 prologend: doctypedecl miscstar .
    8 miscstar: miscstar . misc

    INFSPECIAL  décalage et aller à l'état 8
    COMMENT     décalage et aller à l'état 9

    $défaut  réduction par utilisation de la règle 3 (prologend)

    misc  aller à l'état 12
    pi    aller à l'état 13


État 19

   12 element: INF NOM COLON . NOM attributestar SLASH SUP
   13        | INF NOM COLON . NOM attributestar SUP content INF SLASH NOM COLON NOM SUP

    NOM  décalage et aller à l'état 24


État 20

   14 element: INF NOM attributestar . SLASH SUP
   15        | INF NOM attributestar . SUP content INF SLASH NOM SUP
   16 attributestar: attributestar . attribute

    SLASH  décalage et aller à l'état 25
    SUP    décalage et aller à l'état 26
    NOM    décalage et aller à l'état 27

    attribute  aller à l'état 28


État 21

    5 doctypedecl: DOCTYPE NOM SUP .

    $défaut  réduction par utilisation de la règle 5 (doctypedecl)


État 22

    6 doctypedecl: DOCTYPE NOM NOM . SUP
    7            | DOCTYPE NOM NOM . VALEUR SUP

    SUP     décalage et aller à l'état 29
    VALEUR  décalage et aller à l'état 30


État 23

   16 attributestar: attributestar . attribute
   28 pi: INFSPECIAL NOM attributestar . SUPSPECIAL

    SUPSPECIAL  décalage et aller à l'état 31
    NOM         décalage et aller à l'état 27

    attribute  aller à l'état 28


État 24

   12 element: INF NOM COLON NOM . attributestar SLASH SUP
   13        | INF NOM COLON NOM . attributestar SUP content INF SLASH NOM COLON NOM SUP

    $défaut  réduction par utilisation de la règle 17 (attributestar)

    attributestar  aller à l'état 32


État 25

   14 element: INF NOM attributestar SLASH . SUP

    SUP  décalage et aller à l'état 33


État 26

   15 element: INF NOM attributestar SUP . content INF SLASH NOM SUP

    $défaut  réduction par utilisation de la règle 21 (content)

    content  aller à l'état 34


État 27

   18 attribute: NOM . EGAL VALEUR
   19          | NOM . COLON NOM EGAL VALEUR

    EGAL   décalage et aller à l'état 35
    COLON  décalage et aller à l'état 36


État 28

   16 attributestar: attributestar attribute .

    $défaut  réduction par utilisation de la règle 16 (attributestar)


État 29

    6 doctypedecl: DOCTYPE NOM NOM SUP .

    $défaut  réduction par utilisation de la règle 6 (doctypedecl)


État 30

    7 doctypedecl: DOCTYPE NOM NOM VALEUR . SUP

    SUP  décalage et aller à l'état 37


État 31

   28 pi: INFSPECIAL NOM attributestar SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 28 (pi)


État 32

   12 element: INF NOM COLON NOM attributestar . SLASH SUP
   13        | INF NOM COLON NOM attributestar . SUP content INF SLASH NOM COLON NOM SUP
   16 attributestar: attributestar . attribute

    SLASH  décalage et aller à l'état 38
    SUP    décalage et aller à l'état 39
    NOM    décalage et aller à l'état 27

    attribute  aller à l'état 28


État 33

   14 element: INF NOM attributestar SLASH SUP .

    $défaut  réduction par utilisation de la règle 14 (element)


État 34

   15 element: INF NOM attributestar SUP content . INF SLASH NOM SUP
   20 content: content . item

    INFSPECIAL  décalage et aller à l'état 8
    INF         décalage et aller à l'état 40
    CDATABEGIN  décalage et aller à l'état 41
    DONNEES     décalage et aller à l'état 42
    COMMENT     décalage et aller à l'état 43

    element  aller à l'état 44
    item     aller à l'état 45
    cdsect   aller à l'état 46
    pi       aller à l'état 47


État 35

   18 attribute: NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 48


État 36

   19 attribute: NOM COLON . NOM EGAL VALEUR

    NOM  décalage et aller à l'état 49


État 37

    7 doctypedecl: DOCTYPE NOM NOM VALEUR SUP .

    $défaut  réduction par utilisation de la règle 7 (doctypedecl)


État 38

   12 element: INF NOM COLON NOM attributestar SLASH . SUP

    SUP  décalage et aller à l'état 50


État 39

   13 element: INF NOM COLON NOM attributestar SUP . content INF SLASH NOM COLON NOM SUP

    $défaut  réduction par utilisation de la règle 21 (content)

    content  aller à l'état 51


État 40

   12 element: INF . NOM COLON NOM attributestar SLASH SUP
   13        | INF . NOM COLON NOM attributestar SUP content INF SLASH NOM COLON NOM SUP
   14        | INF . NOM attributestar SLASH SUP
   15        | INF . NOM attributestar SUP content INF SLASH NOM SUP
   15        | INF NOM attributestar SUP content INF . SLASH NOM SUP

    SLASH  décalage et aller à l'état 52
    NOM    décalage et aller à l'état 14


État 41

   27 cdsect: CDATABEGIN . CDATAEND

    CDATAEND  décalage et aller à l'état 53


État 42

   26 item: DONNEES .

    $défaut  réduction par utilisation de la règle 26 (item)


État 43

   25 item: COMMENT .

    $défaut  réduction par utilisation de la règle 25 (item)


État 44

   22 item: element .

    $défaut  réduction par utilisation de la règle 22 (item)


État 45

   20 content: content item .

    $défaut  réduction par utilisation de la règle 20 (content)


État 46

   23 item: cdsect .

    $défaut  réduction par utilisation de la règle 23 (item)


État 47

   24 item: pi .

    $défaut  réduction par utilisation de la règle 24 (item)


État 48

   18 attribute: NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 18 (attribute)


État 49

   19 attribute: NOM COLON NOM . EGAL VALEUR

    EGAL  décalage et aller à l'état 54


État 50

   12 element: INF NOM COLON NOM attributestar SLASH SUP .

    $défaut  réduction par utilisation de la règle 12 (element)


État 51

   13 element: INF NOM COLON NOM attributestar SUP content . INF SLASH NOM COLON NOM SUP
   20 content: content . item

    INFSPECIAL  décalage et aller à l'état 8
    INF         décalage et aller à l'état 55
    CDATABEGIN  décalage et aller à l'état 41
    DONNEES     décalage et aller à l'état 42
    COMMENT     décalage et aller à l'état 43

    element  aller à l'état 44
    item     aller à l'état 45
    cdsect   aller à l'état 46
    pi       aller à l'état 47


État 52

   15 element: INF NOM attributestar SUP content INF SLASH . NOM SUP

    NOM  décalage et aller à l'état 56


État 53

   27 cdsect: CDATABEGIN CDATAEND .

    $défaut  réduction par utilisation de la règle 27 (cdsect)


État 54

   19 attribute: NOM COLON NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 57


État 55

   12 element: INF . NOM COLON NOM attributestar SLASH SUP
   13        | INF . NOM COLON NOM attributestar SUP content INF SLASH NOM COLON NOM SUP
   13        | INF NOM COLON NOM attributestar SUP content INF . SLASH NOM COLON NOM SUP
   14        | INF . NOM attributestar SLASH SUP
   15        | INF . NOM attributestar SUP content INF SLASH NOM SUP

    SLASH  décalage et aller à l'état 58
    NOM    décalage et aller à l'état 14


État 56

   15 element: INF NOM attributestar SUP content INF SLASH NOM . SUP

    SUP  décalage et aller à l'état 59


État 57

   19 attribute: NOM COLON NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 19 (attribute)


État 58

   13 element: INF NOM COLON NOM attributestar SUP content INF SLASH . NOM COLON NOM SUP

    NOM  décalage et aller à l'état 60


État 59

   15 element: INF NOM attributestar SUP content INF SLASH NOM SUP .

    $défaut  réduction par utilisation de la règle 15 (element)


État 60

   13 element: INF NOM COLON NOM attributestar SUP content INF SLASH NOM . COLON NOM SUP

    COLON  décalage et aller à l'état 61


État 61

   13 element: INF NOM COLON NOM attributestar SUP content INF SLASH NOM COLON . NOM SUP

    NOM  décalage et aller à l'état 62


État 62

   13 element: INF NOM COLON NOM attributestar SUP content INF SLASH NOM COLON NOM . SUP

    SUP  décalage et aller à l'état 63


État 63

   13 element: INF NOM COLON NOM attributestar SUP content INF SLASH NOM COLON NOM SUP .

    $défaut  réduction par utilisation de la règle 13 (element)
